# actix_upload

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/owner/: mod.rs
src/rent_property/: mod.rs
src/sale_property/: mod.rs
src/user/: mod.rs
src/utils/: mod.rs  models.rs
uploaded/sales/: ss-reno-png
