[package]
name = "actix_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
bcrypt = "0.17.0"
chrono = {version = "0.4.41", features = ["serde"]}
dotenv = "0.15.0"
infer = "0.19.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
slug = "0.1.6"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono" ] }

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
